fix scroll problem with x overflow of table

--- a/public/csv/assets/site.css
+++ b/public/csv/assets/site.css
@@ -27,7 +27,6 @@ h1 {
 /* fix top border bug on json textarea */
 .json textarea {position: static !important;}
 
-.csv .table {overflow-x: scroll;}
 .json pre {cursor: pointer;}
 
 .json .drop {
